--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "moduleDetection": "force",
-    "useDefineForClassFields": true,
-
-    /* Path aliases */
+    "target": "ESNext",
+    "jsx": "preserve",
+    "lib": ["DOM", "ESNext"],
     "baseUrl": ".",
     "module": "ESNext",
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "paths": {
+      "~/*": ["src/*"],
       "@/*": ["src/*"]
     },
-
-    "allowImportingTsExtensions": true,
-
-    /* Linting */
+    "resolveJsonModule": true,
+    "types": [
+      "node",
+      "vite/client"
+    ],
     "strict": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noEmit": true,
-    "verbatimModuleSyntax": true,
-    "erasableSyntaxOnly": true,
-    "skipLibCheck": true,
-    "noUncheckedSideEffectImports": true
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
   },
-  "include": ["src"]
+  "exclude": ["dist", "node_modules"]
 }
