--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "level:create": "tsx tools/level-tools.ts create",
+    "level:validate": "tsx tools/level-tools.ts validate",
+    "level:list": "tsx tools/level-tools.ts list"
   },
   "dependencies": {
     "pixi.js": "^8.10.0"
@@ -18,6 +21,7 @@
     "@types/node": "^22.15.29",
     "eslint": "^9.28.0",
     "eslint-plugin-format": "^1.0.1",
+    "tsx": "^4.19.4",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   }
